--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -1,13 +1,14 @@
-events {
-    worker_connections 1024;
-}
+# events {
+#     worker_connections 1024;
+# }
 
-http
-{
+# http
+# {
     server
     {
 
         listen 443 ssl;
+        listen [::]:443 ssl;
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_certificate /etc/nginx/ssl/inception.crt;
         ssl_certificate_key /etc/nginx/ssl/inception.key;
@@ -37,7 +38,7 @@ http
         }
 
     }
-}
+# }
 
 # server {
 
