--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -4,66 +4,74 @@
 
 # http
 # {
-    server
-    {
+#     server
+#     {
 
-        listen 443 ssl;
-        listen [::]:443 ssl;
-        ssl_protocols TLSv1.2 TLSv1.3;
-        ssl_certificate /etc/nginx/ssl/inception.crt;
-        ssl_certificate_key /etc/nginx/ssl/inception.key;
+#         listen 443 ssl;
+#         listen [::]:443 ssl;
+#         ssl_protocols TLSv1.2 TLSv1.3;
+#         ssl_certificate /etc/nginx/ssl/inception.crt;
+#         ssl_certificate_key /etc/nginx/ssl/inception.key;
         
-        #indique que la connection sera fait depuis cet host
-        server_name avaganay.42.fr;
+#         #indique que la connection sera fait depuis cet host
+#         server_name avaganay.42.fr;
 
-        # Définit le répertoire racine pour les fichiers du site web, le dossier ou ils sont stockés
-        root /var/www/html;
-        # Fichiers a afficher
-        index index.php index.html index.htm index.nginx-debian.html;
+#         # Définit le répertoire racine pour les fichiers du site web, le dossier ou ils sont stockés
+#         root /var/www/html;
+#         # Fichiers a afficher
+#         index index.php index.html index.htm index.nginx-debian.html;
 
-        # / est utilisée pour faire correspondre une URL spécifique ou un préfixe d'URL
-        location /
-        {
-            # Pour tous les fichiers, nous essayons d’ouvrir le fichier renseigné, si c’est un échec on envoi 404
-            try_files $uri $uri/ =404;
-        }
-
-        # ~ est utilisée pour effectuer une correspondance avec une expression régulière sensible à la casse (tout les fichiers qui se termine par .php)
-        location ~ \.php$
-        {
-        #     # include le fichier qui contient des directives FastCGI spécifiques pour le traitement des scripts PHP
-            include snippets/fastcgi-php.conf;
-        #     # comment renvoyer les requetes pho
-            fastcgi_pass wordpress:9000;
-        }
-
-    }
-# }
-
-# server {
-
-#     listen 443 ssl http2 default_server;
-#     listen [::]:443 ssl http2 default_server;
-
-#     root	/var/www/html;
-# 	index   index.php;
-
-#     ssl_protocols TLSv1.2 TLSv1.3;
-
-#     ssl_certificate /etc/ssl/certs/cert_key.crt;
-#     ssl_certificate_key /etc/ssl/private/cert_key.key;
-
-#     server_name avaganay.42.fr;
-
-#     location / {
-#             try_files $uri $uri/ /index.php?$args;
-#     }
-
-#     location ~ \.php$ {								# Pour toutes les requetes php
-#             include snippets/fastcgi-php.conf;
-#             fastcgi_pass wordpress:9000;				# Comment renvoyer les requetes php sur le port 9000
+#         # / est utilisée pour faire correspondre une URL spécifique ou un préfixe d'URL
+#         location /
+#         {
+#             # Pour tous les fichiers, nous essayons d’ouvrir le fichier renseigné, si c’est un échec on envoi 404
+#             try_files $uri $uri/ =404;
 #         }
+
+#         # ~ est utilisée pour effectuer une correspondance avec une expression régulière sensible à la casse (tout les fichiers qui se termine par .php)
+#         location ~ \.php$
+#         {
+#         #     # include le fichier qui contient des directives FastCGI spécifiques pour le traitement des scripts PHP
+#             include snippets/fastcgi-php.conf;
+#         #     # comment renvoyer les requetes pho
+#             fastcgi_pass wordpress:9000;
+#         }
+
+#     }
 # }
+
+server {
+
+    listen 443 ssl http2 default_server;
+    listen [::]:443 ssl http2 default_server;
+
+    # Définit le répertoire racine pour les fichiers du site web, le dossier ou ils sont stockés
+    root	/var/www/html;
+    # Fichiers a afficher
+	index   index.php;
+
+    ssl_protocols TLSv1.2 TLSv1.3;
+
+    ssl_certificate /etc/ssl/certs/cert_key.crt;
+    ssl_certificate_key /etc/ssl/private/cert_key.key;
+
+    #indique que la connection sera fait depuis cet host
+    server_name avaganay.42.fr;
+
+    # / est utilisée pour faire correspondre une URL spécifique ou un préfixe d'URL
+    location /
+    {
+            try_files $uri $uri/ /index.php?$args;
+    }
+
+    # ~ est utilisée pour effectuer une correspondance avec une expression régulière sensible à la casse (tout les fichiers qui se termine par .php)
+    location ~ \.php$
+    {
+            include snippets/fastcgi-php.conf;
+            # comment renvoyer les requetes php
+            fastcgi_pass wordpress:9000;
+    }
+}
 
 
 # # server {
