--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -39,6 +39,8 @@
 
 FROM debian:buster
 
+RUN sleep 10
+
 RUN apt-get update && \
     apt-get install -y mariadb-client php-fpm php-mysql php-curl php-dom \
                        php-imagick php-mbstring php-zip php-gd php-intl curl && \
